--- a/storage/scratchpad/Cargo.toml
+++ b/storage/scratchpad/Cargo.toml
@@ -25,15 +25,15 @@ proptest = { workspace = true, optional = true }
 rayon = { workspace = true }
 thiserror = { workspace = true }
 
-[target.'cfg(unix)'.dependencies]
-jemallocator = { workspace = true }
-
 [dev-dependencies]
 aptos-types = { workspace = true, features = ["fuzzing"] }
 bitvec = { workspace = true }
 once_cell = { workspace = true }
 proptest = { workspace = true }
 rand = { workspace = true }
+
+[target.'cfg(unix)'.dev-dependencies]
+jemallocator = { workspace = true }
 
 [features]
 fuzzing = ["aptos-types/fuzzing", "proptest"]
