--- a/.github/workflows/forge-specialized.yaml
+++ b/.github/workflows/forge-specialized.yaml
@@ -110,7 +110,6 @@ jobs:
           fi
           echo "IMAGE_TAG: [${IMAGE_TAG}](https://github.com/${{ github.repository }}/commit/${IMAGE_TAG})" >> $GITHUB_STEP_SUMMARY
 
-
   ### Public fullnode tests
 
   # Measures PFN latencies with a constant TPS
@@ -139,6 +138,19 @@ jobs:
       FORGE_TEST_SUITE: pfn_const_tps_with_network_chaos
       POST_TO_SLACK: true
 
+  # Measures PFN latencies with a constant TPS (with a realistic environment)
+  run-forge-pfn-const-tps-realistic-env:
+    if: ${{ github.event_name != 'pull_request' }}
+    needs: determine-test-metadata
+    uses: aptos-labs/aptos-core/.github/workflows/workflow-run-forge.yaml@main
+    secrets: inherit
+    with:
+      IMAGE_TAG: ${{ needs.determine-test-metadata.outputs.IMAGE_TAG }}
+      FORGE_NAMESPACE: forge-pfn-const-tps-with-realistic-env-${{ needs.determine-test-metadata.outputs.IMAGE_TAG }}
+      FORGE_RUNNER_DURATION_SECS: 1800 # Run for 30 minutes
+      FORGE_TEST_SUITE: pfn_const_tps_with_realistic_env
+      POST_TO_SLACK: true
+
   # Measures max PFN throughput and latencies under load
   run-forge-pfn-performance:
     if: ${{ github.event_name != 'pull_request' }}
@@ -163,6 +175,19 @@ jobs:
       FORGE_NAMESPACE: forge-pfn-performance-with-network-chaos-${{ needs.determine-test-metadata.outputs.IMAGE_TAG }}
       FORGE_RUNNER_DURATION_SECS: 1800 # Run for 30 minutes
       FORGE_TEST_SUITE: pfn_performance_with_network_chaos
+      POST_TO_SLACK: true
+
+  # Measures max PFN throughput and latencies under load (with a realistic environment)
+  run-forge-pfn-performance-realistic-env:
+      if: ${{ github.event_name != 'pull_request' }}
+      needs: determine-test-metadata
+      uses: aptos-labs/aptos-core/.github/workflows/workflow-run-forge.yaml@main
+      secrets: inherit
+      with:
+      IMAGE_TAG: ${{ needs.determine-test-metadata.outputs.IMAGE_TAG }}
+      FORGE_NAMESPACE: forge-pfn-performance-with-realistic-env-${{ needs.determine-test-metadata.outputs.IMAGE_TAG }}
+      FORGE_RUNNER_DURATION_SECS: 1800 # Run for 30 minutes
+      FORGE_TEST_SUITE: pfn_performance_with_realistic_env
       POST_TO_SLACK: true
 
   ### State sync tests
