on chain config (#9039)
Co-authored-by: danielxiangzl <daniel@aptoslabs.com>

--- a/aptos-move/aptos-release-builder/data/release.yaml
+++ b/aptos-move/aptos-release-builder/data/release.yaml
@@ -69,3 +69,15 @@ proposals:
     - FeatureFlag:
         enabled:
           - gas_payer_enabled
+  - name: enable_block_gas_limit
+    metadata:
+      title: "Enable Block Gas Limit"
+      description: "AIP-33: The block gas limit is a feature that terminates block execution when the gas consumed by the committed prefix of transactions exceeds the limit, thus providing predictable latency."
+      discussion_url: "https://github.com/aptos-foundation/AIPs/issues/132"
+    execution_mode: MultiStep
+    update_sequence:
+    - Execution:
+        V2:
+          transaction_shuffler_type:
+            sender_aware_v1: 32
+          block_gas_limit : 35000
