[python-sdk] Add a chunked package uploader
* Accumulate packages incrementally on-chain
* When the entire package is there, assemble and call publish
* Use the Python SDK tooling to demonstrate -- could consider building a
  small tool if there's demand and no one gets there first...

Verified:
https://fullnode.testnet.aptoslabs.com/v1/accounts/0xfa3911d7715238b2e3bd5b26b6a35e11ffa16cff318bc11471e84eccee8bd291/modules

--- a/ecosystem/python/sdk/Makefile
+++ b/ecosystem/python/sdk/Makefile
@@ -14,8 +14,8 @@ fmt:
 	poetry run black aptos_sdk examples
 
 lint:
-	- poetry run mypy aptos_sdk
-	- poetry run flake8 aptos_sdk examples
+	poetry run mypy aptos_sdk
+	poetry run flake8 aptos_sdk examples
 
 examples:
 	poetry run python -m examples.aptos-token
