[CLI] fix u64 to u256 input args (#9111)
* fix u64 to u256 input args

* add unit test to test view u64 arg

* Enable arbitrary_precision to serde_json to fix percision issue on CLI

* add big number test

* update big number

* update test_big_number() move func to return all 3 values

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -556,7 +556,7 @@ sha3 = "0.9.1"
 siphasher = "0.3.10"
 serde = { version = "1.0.137", features = ["derive", "rc"] }
 serde_bytes = "0.11.6"
-serde_json = { version = "1.0.81", features = ["preserve_order"] }
+serde_json = { version = "1.0.81", features = ["preserve_order", "arbitrary_precision"] } # Note: arbitrary_precision is required to parse u256 in JSON
 serde_repr = "0.1"
 serde_merge = "0.1.3"
 serde-name = "0.1.1"
