--- a/Cargo.toml
+++ b/Cargo.toml
@@ -545,7 +545,7 @@ rand = "0.7.3"
 rand_core = "0.5.1"
 random_word = "0.3.0"
 rayon = "1.5.2"
-redis = { version = "0.22.3", features = ["tokio-comp", "script"] }
+redis = { version = "0.22.3", features = ["tokio-comp", "script", "connection-manager"] }
 redis-test = { version = "0.1.1", features = ["aio"] }
 regex = "1.5.5"
 reqwest = { version = "0.11.11", features = [
