--- a/ecosystem/typescript/sdk/package.json
+++ b/ecosystem/typescript/sdk/package.json
@@ -52,6 +52,7 @@
   ],
   "dependencies": {
     "@aptos-labs/aptos-client": "^0.0.2",
+    "eventemitter3": "^5.0.1",
     "@noble/hashes": "1.1.3",
     "@scure/bip39": "1.1.0",
     "form-data": "4.0.0",
