Uses aptos-core x25519-dalek library with relaxed zeroize dep (#9354)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -690,3 +690,4 @@ debug = true
 [patch.crates-io]
 serde-reflection = { git = "https://github.com/aptos-labs/serde-reflection", rev = "839aed62a20ddccf043c08961cfe74875741ccba" }
 merlin = { git = "https://github.com/aptos-labs/merlin" }
+x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
