[Prover] Revive the Prover lab (#9518)
* Revived the Prover lab

* Added Prover lab data

* Fixed the lint errors in the Prover lab

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -194,6 +194,7 @@ members = [
     "third_party/move/move-prover",
     "third_party/move/move-prover/boogie-backend",
     "third_party/move/move-prover/bytecode",
+    "third_party/move/move-prover/lab",
     "third_party/move/move-prover/move-abigen",
     "third_party/move/move-prover/move-docgen",
     "third_party/move/move-prover/move-errmapgen",
