[gas] automated gas calibration (#9265)
* [gas] wip - initial setup

* [gas] modified gas meter - calibration algebra

* [gas] add comments

* [gas] implement modified gas meter and build simple workflow

* [gas] e2e workflow

* [gas] improve error handling and tests

* [gas] bootstrap mvir

* [gas] refine outlier detection and ux

* [gas] address review comments

* [gas] detection of undetermined variables

* [gas] print estimated and actual running times for all samples

* [gas] support CLI flags for iterations and pattern matching

* [gas] add README documentation for user and init samples directory

* [gas] take median of running times

* [gas] address more reviewer comments

* [gas] rref with partial pivoting

* [gas] calibrate remaining bytecode instructions

* [gas] fix math interface bugs

* [gas] calibrate global operations

* [gas] address reviewer comments

* [gas] refactor compile_and_run logic

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,11 @@ members = [
     "api/openapi-spec-generator",
     "api/test-context",
     "api/types",
+    "aptos-move/aptos-abstract-gas-usage",
     "aptos-move/aptos-aggregator",
     "aptos-move/aptos-debugger",
     "aptos-move/aptos-gas-algebra",
+    "aptos-move/aptos-gas-calibration",
     "aptos-move/aptos-gas-meter",
     "aptos-move/aptos-gas-profiling",
     "aptos-move/aptos-gas-schedule",
@@ -304,8 +306,10 @@ aptos-forge = { path = "testsuite/forge" }
 aptos-framework = { path = "aptos-move/framework" }
 aptos-fuzzer = { path = "testsuite/aptos-fuzzer" }
 fuzzer = { path = "testsuite/fuzzer" }
+aptos-abstract-gas-usage = { path = "aptos-move/aptos-abstract-gas-usage" }
 aptos-gas-meter = { path = "aptos-move/aptos-gas-meter" }
 aptos-gas-algebra = { path = "aptos-move/aptos-gas-algebra" }
+aptos-gas-calibration = { path = "aptos-move/aptos-gas-calibration" }
 aptos-gas-profiling = { path = "aptos-move/aptos-gas-profiling" }
 aptos-gas-schedule = { path = "aptos-move/aptos-gas-schedule" }
 aptos-gas-schedule-updator = { path = "aptos-move/aptos-gas-schedule-updator" }
@@ -408,6 +412,8 @@ aptos-writeset-generator = { path = "aptos-move/writeset-transaction-generator" 
 
 # External crate dependencies.
 # Please do not add any test features here: they should be declared by the individual crate.
+nalgebra = "0.32"
+float-cmp = "0.9.0"
 again = "0.1.2"
 anyhow = "1.0.71"
 anstyle = "1.0.1"
