[aptos-move] Make parallel BlockSTM comparison testing an opt-in behavior (#9726)
* [aptos-move] Make parallel BlockSTM comparision testing an opt-in behavior

Until now, each Move e2e test was executed two times: one time using sequential block executor, and then a second time using the parallel BlockSTM, comparing the result.

This is a large overhead of roughly 2/3 of the execution time of each test in our growing test suite. Here is a comparsion of running times for one e2e test:

```
With parallel:
cargo test --release test_fee_collection_and_distribution_for_burn_percentage  29.97s user 1.55s system 186% cpu 16.934 total

Without parallel:
cargo test --release test_fee_collection_and_distribution_for_burn_percentage  10.36s user 1.04s system 99% cpu 11.480 total
```

In this PR, we make the default behavior of parallel comparsion testing dependent on an environment variable E2E_PARALLEL_EXEC: only if this set will the old behavior be maintained. This allows to run those tests still locally or in a nightly run. Also functions are added to explicitly opt-in or opt-out of parallel execution. Possibly some of the existing e2e tests should be turned on again even as CI blocker for PE.

* Run CI Rust unit tests in release mode

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -704,6 +704,12 @@ lto = "thin"
 strip = true
 codegen-units = 1
 
+[profile.ci]
+inherits = "release"
+debug = true
+overflow-checks = true
+debug-assertions = true
+
 [profile.bench]
 debug = true
 
