[aggregator] New aggregator resolver (#9553)
- Aggregator does not use TableResolver anymore
- New aggregator APIs for V2
- Some basic test infrastructure changes to enable cross-crate testing.

Cherry-picks from #8941

--- a/aptos-move/framework/Cargo.toml
+++ b/aptos-move/framework/Cargo.toml
@@ -14,7 +14,7 @@ rust-version = { workspace = true }
 
 [dependencies]
 anyhow = { workspace = true }
-aptos-aggregator = { workspace = true }
+aptos-aggregator = { workspace = true, features = ["testing"] }
 aptos-crypto = { workspace = true, features = ["fuzzing"] }
 aptos-gas-algebra = { workspace = true }
 aptos-gas-schedule = { workspace = true }
@@ -86,7 +86,6 @@ tiny-keccak = { workspace = true }
 
 [dev-dependencies]
 aptos-gas-meter = { workspace = true }
-aptos-language-e2e-tests = { workspace = true }
 aptos-vm = { workspace = true, features = ["testing"] }
 claims = { workspace = true }
 move-cli = { workspace = true }
