--- a/aptos-move/aptos-vm-types/Cargo.toml
+++ b/aptos-move/aptos-vm-types/Cargo.toml
@@ -19,6 +19,7 @@ aptos-gas-algebra = { workspace = true }
 aptos-gas-schedule = { workspace = true }
 aptos-state-view = { workspace = true }
 aptos-types = { workspace = true }
+bcs = { workspace = true }
 either = { workspace = true }
 move-binary-format = { workspace = true }
 move-core-types = { workspace = true }
