Aggregator snapshots native functions (#9766)
* Initial draft of aggregator snapshot native functions

* Create snapshot for string input

* read_snapshot and copy_snapshot for strings

* Add string_concat method

* Add unit tests

* Remove print statement

* Addressing PR comments

* Addresing PR comments

* Update release.yaml file

* Enable feature flag

* string_concat for u64 and u128

* Added a few unit tests

* Changing a few function names

* Minor changes

* Add e2e move tests

* rust lint

--- a/aptos-move/aptos-release-builder/data/release.yaml
+++ b/aptos-move/aptos-release-builder/data/release.yaml
@@ -18,6 +18,28 @@ proposals:
       - FeatureFlag:
           disabled:
             - module_event
+  - name: enable_block_gas_limit
+    metadata:
+      title: "Enable Block Gas Limit"
+      description: "AIP-33: The block gas limit is a feature that terminates block execution when the gas consumed by the committed prefix of transactions exceeds the limit, thus providing predictable latency."
+      discussion_url: "https://github.com/aptos-foundation/AIPs/issues/132"
+    execution_mode: MultiStep
+    update_sequence:
+    - Execution:
+        V2:
+          transaction_shuffler_type:
+            deprecated_sender_aware_v1: 32
+          block_gas_limit : 35000
+  - name: enable_aggregator_snapshots
+    metadata:
+      title: "Enable Aggregator Snapshots"
+      description: "AIP-43: Aggregator snapshots can be used to postpone the read operations on aggregators to the commit phase and improve concurrency of transaction execution."
+      discussion_url: "https://github.com/aptos-foundation/AIPs/issues/209"
+    execution_mode: MultiStep
+    update_sequence:
+      - FeatureFlag:
+          enabled:
+            - aggregator_snapshots
   - name: enable_module_event
     metadata:
       title: "Enable module event"
